[SELV3-842] Add transaction history backend
